Introduce property to leave centre of wheel blank, plus add 'Create Wheel' command to UI
git-svn-id: http://subversion.assembla.com/svn/Debrief@3138 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin id="org.mwc.debrief.core" name="Debrief Core" version="1.0.129"
+<plugin id="org.mwc.debrief.core" name="Debrief Core" version="1.0.130"
 	provider-name="MWC" class="org.mwc.debrief.core.DebriefPlugin">
 
 	<runtime>
@@ -204,6 +204,12 @@
 			<action class="org.mwc.debrief.core.creators.shapes.InsertCircle"
 				icon="icons/circle.gif" id="org.mwc.debrief.core.creators.shapes.InsertCircle"
 				label="&amp;Circle" menubarPath="org.mwc.debrief.core.EditorShapes/shapes"
+				style="push" toolbarPath="org.mwc.debrief.core.EditorShapes/shapes" />
+
+
+			<action class="org.mwc.debrief.core.creators.shapes.InsertWheel"
+				icon="icons/wheel.png" id="org.mwc.debrief.core.creators.shapes.InsertWheel"
+				label="&amp;Wheel" menubarPath="org.mwc.debrief.core.EditorShapes/shapes"
 				style="push" toolbarPath="org.mwc.debrief.core.EditorShapes/shapes" />
 
 			<action class="org.mwc.debrief.core.creators.shapes.InsertPolygon"
