better View naming
git-svn-id: http://subversion.assembla.com/svn/Debrief@3142 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.SensorFusion/plugin.xml
+++ b/trunk/org.mwc.debrief.SensorFusion/plugin.xml
@@ -8,7 +8,7 @@
             class="org.mwc.debrief.sensorfusion.views.SensorFusionView"
             icon="icons/merge.gif"
             id="org.mwc.debrief.SensorFusion"
-            name="Sensor Fusion Workshop">
+            name="Bulk Sensor Manager">
       </view>
    </extension>
 </plugin>
