able to submit new demanded status
git-svn-id: http://subversion.assembla.com/svn/Debrief@3147 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.comms/.classpath
+++ b/trunk/org.mwc.asset.comms/.classpath
@@ -16,5 +16,8 @@
 	<classpathentry kind="lib" path="libs/RestLet/lib/org.codehaus.jettison.jar"/>
 	<classpathentry kind="lib" path="libs/RestLet/lib/org.json.jar"/>
 	<classpathentry kind="lib" path="libs/RestLet/lib/org.restlet.ext.xstream.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.mwc.asset.legacy"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.mwc.cmap.legacy"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.mwc.debrief.legacy"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
