switch bulk sensor view to waterfall display, reinstate view icon
git-svn-id: http://subversion.assembla.com/svn/Debrief@3170 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.SensorFusion/plugin.xml
+++ b/trunk/org.mwc.debrief.SensorFusion/plugin.xml
@@ -6,7 +6,7 @@
       <view
             category="org.mwc.cmap.plotViewer.CMAP"
             class="org.mwc.debrief.sensorfusion.views.SensorFusionView"
-            icon="icons/merge.gif"
+            icon="icons/merge.png"
             id="org.mwc.debrief.SensorFusion"
             name="Bulk Sensor Manager">
       </view>
