start connecting listeners
git-svn-id: http://subversion.assembla.com/svn/Debrief@3225 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.NetAsset/plugin.xml
+++ b/trunk/org.mwc.asset.NetAsset/plugin.xml
@@ -23,7 +23,7 @@
          point="org.eclipse.ui.views">
       <view
             name="View"
-            class="org.mwc.asset.netasset.View"
+            class="org.mwc.asset.netasset.NetAssetView"
             id="org.mwc.asset.NetAsset.view">
       </view>
    </extension>
