--- a/trunk/org.mwc.asset.comms/.classpath
+++ b/trunk/org.mwc.asset.comms/.classpath
@@ -2,6 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry exported="true" kind="lib" path="libs/RestLet/lib/org.restlet.jar" sourcepath="docs/src"/>
+	<classpathentry exported="true" kind="lib" path="libs/RestLet/lib/org.restlet.ext.xstream.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/RestLet/lib/org.restlet.ext.json.jar"/>
 	<classpathentry kind="lib" path="libs/smackx.jar"/>
 	<classpathentry kind="lib" path="libs/smackx-debug.jar"/>
 	<classpathentry kind="lib" path="libs/smackx-jingle.jar"/>
@@ -10,12 +13,9 @@
 	<classpathentry kind="lib" path="/contribs/kryonet-1.02/kryonet-1.02.jar"/>
 	<classpathentry kind="lib" path="/contribs/kryonet-1.02/minlog-1.2.jar"/>
 	<classpathentry kind="lib" path="/contribs/kryonet-1.02/reflectasm-0.8.jar"/>
-	<classpathentry kind="lib" path="libs/RestLet/lib/org.restlet.jar" sourcepath="docs/src"/>
-	<classpathentry kind="lib" path="libs/RestLet/lib/org.restlet.ext.json.jar"/>
 	<classpathentry kind="lib" path="libs/RestLet/lib/com.thoughtworks.xstream.jar"/>
 	<classpathentry kind="lib" path="libs/RestLet/lib/org.codehaus.jettison.jar"/>
 	<classpathentry kind="lib" path="libs/RestLet/lib/org.json.jar"/>
-	<classpathentry kind="lib" path="libs/RestLet/lib/org.restlet.ext.xstream.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.mwc.asset.legacy"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.mwc.cmap.legacy"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.mwc.debrief.legacy"/>
