--- a/trunk/org.mwc.asset.NetAsset/build.properties
+++ b/trunk/org.mwc.asset.NetAsset/build.properties
@@ -4,4 +4,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               splash.bmp
+               splash.bmp,\
+               bin/,\
+               libs/
