working with use of RestLet
git-svn-id: http://subversion.assembla.com/svn/Debrief@3234 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.NetAsset/build.properties
+++ b/trunk/org.mwc.asset.NetAsset/build.properties
@@ -1,4 +1,6 @@
-source.. = src/
+source.. = src/,\
+           libs/,\
+           bin/
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
@@ -6,4 +8,5 @@ bin.includes = plugin.xml,\
                icons/,\
                splash.bmp,\
                bin/,\
-               libs/
+               libs/,\
+               libs/restlet/org.restlet.jar
