actually talking to myself...
git-svn-id: http://subversion.assembla.com/svn/Debrief@3238 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.NetAsset/.classpath
+++ b/trunk/org.mwc.asset.NetAsset/.classpath
@@ -14,6 +14,7 @@
 	<classpathentry kind="lib" path="libs/restlet/org.codehaus.jettison.jar"/>
 	<classpathentry kind="lib" path="libs/restlet/org.restlet.ext.xml.jar"/>
 	<classpathentry kind="lib" path="libs/restlet/org.restlet.ext.xstream.jar"/>
-	<classpathentry kind="lib" path="libs/restlet/org.restlet.jar"/>
+	<classpathentry kind="lib" path="libs/restlet/org.restlet.jar" sourcepath="docs/restlet_src"/>
+	<classpathentry kind="lib" path="libs/restlet/org.json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
