introduce chart component
git-svn-id: http://subversion.assembla.com/svn/Debrief@3249 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.NetAsset/.classpath
+++ b/trunk/org.mwc.asset.NetAsset/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="libs/restlet/org.restlet.jar" sourcepath="docs/restlet_src"/>
 	<classpathentry kind="src" path="libs"/>
 	<classpathentry kind="src" path="bin"/>
+	<classpathentry kind="lib" path="swt-grouplayout.jar" sourcepath="swt-grouplayout.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
