start to integrate into workbench
git-svn-id: http://subversion.assembla.com/svn/Debrief@3257 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.NetAsset/plugin.xml
+++ b/trunk/org.mwc.asset.NetAsset/plugin.xml
@@ -26,6 +26,12 @@
             class="org.mwc.asset.netasset.NetAssetView"
             id="org.mwc.asset.NetAsset.NetAssetView">
       </view>
+      <view
+            category="org.mwc.asset.core.simulation.category"
+            class="org.mwc.asset.netasset.NetControl"
+            id="org.mwc.asset.NetAsset.NetControl"
+            name="View">
+      </view>
    </extension>
    <extension
          id="product"
