Refactor common wizards into core
git-svn-id: http://subversion.assembla.com/svn/Debrief@3267 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.core/plugin.xml
+++ b/trunk/org.mwc.cmap.core/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.mwc.cmap.core"
    name="CMap Core Resources Plug-in"
-   version="1.0.120"
+   version="1.0.121"
    provider-name="MWC"
    class="org.mwc.cmap.core.CorePlugin">
 
@@ -37,6 +37,7 @@
       <import plugin="org.eclipse.core.resources"/>
       <import plugin="org.eclipse.ui.views"/>
       <import plugin="org.eclipse.help"/>
+      <import plugin="org.eclipse.ui.ide" version="3.5.2"/>
    </requires>
    
 
