--- a/trunk/org.mwc.debrief.build/build361.properties
+++ b/trunk/org.mwc.debrief.build/build361.properties
@@ -9,7 +9,7 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
-product=/de.vogella.build.ui/hellorcp.product
+product=/org.mwc.debrief.core/debrief.product
 runPackager=true
 
 p2.gathering=true
@@ -20,7 +20,7 @@ p2.artifact.repo=file:${builder}/repository
 #archiveNamePrefix=
 
 # The prefix that will be used in the generated archive.
-archivePrefix=yourproduct
+archivePrefix=Debrief361
 
 # The location underwhich all of the build output will be collected.
 collectingFolder=${archivePrefix}
