move deltapack into Eclipse folder
git-svn-id: http://subversion.assembla.com/svn/Debrief@3286 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.build/build_release_osx.properties
+++ b/trunk/org.mwc.debrief.build/build_release_osx.properties
@@ -1,6 +1,6 @@
 eclipseLocation=${user.home}/Applications/eclipse-rcp-galileo-SR2-macosx-cocoa-x86_64
 buildDirectory=${user.home}/dev/Debrief/deploy/out
-pluginPath=${user.home}/Applications/eclipse-3.5.2-delta-pack
+pluginPath=${user.home}/Applications/eclipse-rcp-galileo-SR2-macosx-cocoa-x86_64/deltapack
 path2winjre=${user.home}/dev/WindowsJRE/jre6
 pdeBuildPluginVersion=3.5.2.R35x_20100114
 equinoxLauncherPluginVersion=1.0.201.R35x_v20090715
