--- a/trunk/org.mwc.debrief.build/build_release_osx.properties
+++ b/trunk/org.mwc.debrief.build/build_release_osx.properties
@@ -25,9 +25,9 @@ collectingFolder=${archivePrefix}
 #     configs=win32,win32,x86 & linux,motif,x86
 # By default the value is *,*,*
 #configs = *, *, *
-configs=win32, win32, x86
+configs=win32, win32, x86 & linux, motif, x86
 	
-	#The format of the archive. By default a zip is created using antZip.
+#The format of the archive. By default a zip is created using antZip.
 #The list can only contain the configuration for which the desired format is different than zip.
 archivesFormat=win32, win32, x86 - folder
 
