--- a/trunk/org.mwc.debrief.build/build361.properties
+++ b/trunk/org.mwc.debrief.build/build361.properties
@@ -74,13 +74,17 @@ skipFetch=true
 # The location of the Java jars to compile against.  Typically the rt.jar for your JDK/JRE
 #bootclasspath=${java.home}/lib/rt.jar
 
+
+bootclasspath=/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/jsfd.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/classes.jar:/System/Library/Frameworks/JavaVM.framework/Frameworks/JavaRuntimeSupport.framework/Resources/Java/JavaRuntimeSupport.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/ui.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/laf.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/sunrsasign.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/jsse.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/jce.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/charsets.jar	
+
+
 # If using an IBM VM, use
 #bootclasspath=${java.home}/lib/core.jar;${java.home}/lib/vm.jar
 
 # specific JRE locations to compile against. These values are used to compile bundles specifying a 
 # Bundle-RequiredExecutionEnvironment. Uncomment and set values for environments that you support
 #CDC-1.0/Foundation-1.0= /path/to/rt.jar
-CDC-1.1/Foundation-1.1=${java.home}/lib/rt.jar
+#CDC-1.1/Foundation-1.1=${java.home}/lib/jce.jar
 #OSGi/Minimum-1.0=
 #OSGi/Minimum-1.1=
 #JRE-1.1=
@@ -88,7 +92,7 @@ CDC-1.1/Foundation-1.1=${java.home}/lib/rt.jar
 #J2SE-1.3=
 #J2SE-1.4=
 #J2SE-1.5=${java.home}/lib/rt.jar
-JavaSE-1.6=${java.home}/lib/rt.jar
+JavaSE-1.6=${bootclasspath}
 #PersonalJava-1.1=
 #PersonalJava-1.2=
 #CDC-1.0/PersonalBasis-1.0=
