step back to JDK1.5 version (performance & versatility)
git-svn-id: http://subversion.assembla.com/svn/Debrief@3300 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.grideditor/build.properties
+++ b/trunk/org.mwc.cmap.grideditor/build.properties
@@ -5,6 +5,4 @@ bin.includes = META-INF/,\
                lib/,\
                plugin.xml,\
                icons/
-src.includes = icons/,\
-               plugin.xml,\
-               plugin.properties
+src.includes = icons/
