--- a/trunk/org.mwc.cmap.legacy/build.properties
+++ b/trunk/org.mwc.cmap.legacy/build.properties
@@ -8,6 +8,4 @@ bin.includes = plugin.xml,\
                libs/flanagan.jar
 jars.compile.order = cmap_legacy.jar
 source.cmap_legacy.jar = src/
-src.includes = src/,\
-               libs/,\
-               plugin.xml
+src.includes = libs/
