--- a/trunk/org.mwc.debrief.build/build361.properties
+++ b/trunk/org.mwc.debrief.build/build361.properties
@@ -19,6 +19,9 @@ p2.artifact.repo=file:${builder}/repository
 #Set the name of the archive that will result from the product build.
 #archiveNamePrefix=
 
+archivesFormat=win32, win32, x86 - folder
+
+
 # The prefix that will be used in the generated archive.
 archivePrefix=Debrief361
 
