--- a/trunk/org.mwc.debrief.build/build361.properties
+++ b/trunk/org.mwc.debrief.build/build361.properties
@@ -12,8 +12,11 @@
 product=/org.mwc.debrief.core/debrief.product
 runPackager=true
 
+# The prefix that will be used in the generated archive.
+archivePrefix=DebriefNG
+
 p2.gathering=true
-		p2.metadata.repo=file:${builder}/repository
+p2.metadata.repo=file:${builder}/repository
 p2.artifact.repo=file:${builder}/repository
 
 #Set the name of the archive that will result from the product build.
@@ -21,9 +24,6 @@ p2.artifact.repo=file:${builder}/repository
 
 archivesFormat=win32, win32, x86 - folder
 
-
-# The prefix that will be used in the generated archive.
-archivePrefix=Debrief361
 
 # The location underwhich all of the build output will be collected.
 collectingFolder=${archivePrefix}
@@ -52,7 +52,7 @@ allowBinaryCycles = true
 buildType=I
 
 # ID of the build.  Used in naming the build output.
-buildId=TestBuild
+buildId=BuildLogs
 
 # Label for the build.  Used in naming the build output
 buildLabel=${buildType}.${buildId}
@@ -78,9 +78,6 @@ skipFetch=true
 #bootclasspath=${java.home}/lib/rt.jar
 
 
-bootclasspath=/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/jsfd.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/classes.jar:/System/Library/Frameworks/JavaVM.framework/Frameworks/JavaRuntimeSupport.framework/Resources/Java/JavaRuntimeSupport.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/ui.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/laf.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/sunrsasign.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/jsse.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/jce.jar:/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classes/charsets.jar	
-
-
 # If using an IBM VM, use
 #bootclasspath=${java.home}/lib/core.jar;${java.home}/lib/vm.jar
 
@@ -95,7 +92,7 @@ bootclasspath=/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Classe
 #J2SE-1.3=
 #J2SE-1.4=
 #J2SE-1.5=${java.home}/lib/rt.jar
-JavaSE-1.6=${bootclasspath}
+#JavaSE-1.6=${bootclasspath}
 #PersonalJava-1.1=
 #PersonalJava-1.2=
 #CDC-1.0/PersonalBasis-1.0=
@@ -113,7 +110,7 @@ javacDebugInfo=false
 javacFailOnError=true
 
 # Enable or disable verbose mode of the compiler
-javacVerbose=true
+javacVerbose=false
 
 # Extra arguments for the compiler. These are specific to the java compiler being used.
 #compilerArg=
