--- a/trunk/org.mwc.debrief.build/build361.properties
+++ b/trunk/org.mwc.debrief.build/build361.properties
@@ -22,9 +22,6 @@ p2.artifact.repo=file:${builder}/repository
 #Set the name of the archive that will result from the product build.
 #archiveNamePrefix=
 
-archivesFormat=win32, win32, x86 - folder
-
-
 # The location underwhich all of the build output will be collected.
 collectingFolder=${archivePrefix}
 
@@ -32,7 +29,14 @@ collectingFolder=${archivePrefix}
 # value is a '&' separated list of ',' separate triples.  For example, 
 #     configs=win32,win32,x86 & linux,motif,x86
 # By default the value is *,*,*
-configs = win32, win32, x86
+
+configs = win32,win32,x86
+archivesFormat=win32,win32,x86 - folder
+
+# MAC build options...
+#configs = macosx, carbon, ppc
+#archivesFormat=macosx, carbon, ppc - folder
+
 #configs=win32, win32, x86 & \
 #	linux, gtk, ppc &\
 # linux, gtk, x86 & \
