- allow user to select file from explorer and 'open with' Debrief - put splash screen back in (hide pause whilst app opens) - sort out permissions problem - restore custom Debrief icon
git-svn-id: http://subversion.assembla.com/svn/Debrief@3320 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/build.properties
+++ b/trunk/org.mwc.debrief.core/build.properties
@@ -7,7 +7,8 @@ bin.includes = plugin.xml,\
                icons/,\
                images/,\
                plugin_customization.ini,\
-               intro_content/
+               intro_content/,\
+               splash.bmp
 generate.p2.metadata=true 
 p2.gathering=true
 p2.metadata.repo = file:${buildDirectory}/repository 
