--- a/trunk/org.mwc.debrief.build/build361.properties
+++ b/trunk/org.mwc.debrief.build/build361.properties
@@ -30,12 +30,12 @@ collectingFolder=${archivePrefix}
 #     configs=win32,win32,x86 & linux,motif,x86
 # By default the value is *,*,*
 
-#configs = win32,win32,x86
-#archivesFormat=win32,win32,x86 - folder
+configs = win32,win32,x86
+archivesFormat=win32,win32,x86 - folder
 
 # MAC build options...
-configs = macosx, carbon, ppc
-archivesFormat=macosx, carbon, ppc - folder
+#configs = macosx, carbon, ppc
+#archivesFormat=macosx, carbon, ppc - folder
 
 #configs=win32, win32, x86 & \
 #	linux, gtk, ppc &\
