part-way through switching to zip build output (ready for copy to internet)
git-svn-id: http://subversion.assembla.com/svn/Debrief@3324 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.build/build361.properties
+++ b/trunk/org.mwc.debrief.build/build361.properties
@@ -23,7 +23,7 @@ p2.artifact.repo=file:${builder}/repository
 #archiveNamePrefix=
 
 # The location underwhich all of the build output will be collected.
-collectingFolder=${archivePrefix}
+#collectingFolder=${archivePrefix}
 
 # The list of {os, ws, arch} configurations to build.  This 
 # value is a '&' separated list of ',' separate triples.  For example, 
@@ -31,7 +31,7 @@ collectingFolder=${archivePrefix}
 # By default the value is *,*,*
 
 configs = win32,win32,x86
-archivesFormat=win32,win32,x86 - folder
+#ßarchivesFormat=win32,win32,x86-antZip
 
 # MAC build options...
 #configs = macosx, carbon, ppc
@@ -56,10 +56,10 @@ allowBinaryCycles = true
 buildType=I
 
 # ID of the build.  Used in naming the build output.
-buildId=BuildLogs
+buildId=DebriefNG
 
 # Label for the build.  Used in naming the build output
-buildLabel=${buildType}.${buildId}
+buildLabel=out
 
 # Timestamp for the build.  Used in naming the build output
 timestamp=007
