ditch compiler warnings after shift to 3.6
git-svn-id: http://subversion.assembla.com/svn/Debrief@3338 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.core/build.properties
+++ b/trunk/org.mwc.cmap.core/build.properties
@@ -5,7 +5,6 @@ bin.includes = plugin.xml,\
                icons/,\
                libs/
 jars.compile.order = cmap_core.jar
-src.includes = icons/,\
-               src/
+src.includes = icons/
 root=file:libs/javaClipboard.dll              
              
