fix remaining 3.6 warnings
git-svn-id: http://subversion.assembla.com/svn/Debrief@3340 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.legacy/build.properties
+++ b/trunk/org.mwc.cmap.legacy/build.properties
@@ -1,6 +1,5 @@
 output.cmap_legacy.jar = bin/
-bin.includes = plugin.xml,\
-               cmap_legacy.jar,\
+bin.includes = cmap_legacy.jar,\
                libs/,\
                META-INF/,\
                libs/jcommon-1.0.16.jar,\
