--- a/trunk/org.mwc.debrief.legacy/build.properties
+++ b/trunk/org.mwc.debrief.legacy/build.properties
@@ -1,5 +1,4 @@
 source.debrief_legacy.jar = src/
 output.debrief_legacy.jar = bin/
-bin.includes = plugin.xml,\
-               debrief_legacy.jar,\
+bin.includes = debrief_legacy.jar,\
                META-INF/
