--- a/trunk/org.mwc.debrief.legacy/build.xml
+++ b/trunk/org.mwc.debrief.legacy/build.xml
@@ -7,7 +7,7 @@
 	<property name="basearch" value="${arch}"/>
 	<property name="basenl" value="${nl}"/>
 	<property name="bundleId" value="org.mwc.debrief.legacy"/>
-	<property name="bundleVersion" value="1.0.163"/>
+	<property name="bundleVersion" value="1.0.165"/>
 	<property name="p2.publishonerror" value="false"/>
 
 	<!-- Compiler settings. -->
@@ -47,7 +47,7 @@
 			<isset property="buildTempFolder"/>
 		</condition>
 		<property name="pluginTemp" value="${basedir}"/>
-		<condition property="build.result.folder" value="${pluginTemp}/org.mwc.debrief.legacy_1.0.163"		>
+		<condition property="build.result.folder" value="${pluginTemp}/org.mwc.debrief.legacy_1.0.165"		>
 			<isset property="buildTempFolder"/>
 		</condition>
 		<property name="build.result.folder" value="${basedir}"/>
@@ -77,7 +77,7 @@
 		<antcall target="gather.bin.parts">
 			<param name="destination.temp.folder" value="${temp.folder}/"/>
 		</antcall>
-		<jar destfile="${plugin.destination}/org.mwc.debrief.legacy_1.0.163.jar" basedir="${temp.folder}/org.mwc.debrief.legacy_1.0.163" filesetmanifest="merge"/>
+		<jar destfile="${plugin.destination}/org.mwc.debrief.legacy_1.0.165.jar" basedir="${temp.folder}/org.mwc.debrief.legacy_1.0.165" filesetmanifest="merge"/>
 		<delete dir="${temp.folder}"/>
 	</target>
 
@@ -86,23 +86,23 @@
 		<mkdir dir="${temp.folder}/debrief_legacy.jar.bin"/>
 		<path id="debrief_legacy.jar.classpath">
 			<pathelement path="../org.mwc.cmap.legacy/bin/"/>
-			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.105/bin/"/>
+			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.107/bin/"/>
 			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy/cmap_legacy.jar"/>
-			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.105/cmap_legacy.jar"/>
+			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.107/cmap_legacy.jar"/>
 			<pathelement path="../org.mwc.cmap.legacy/libs/openmap.jar"/>
-			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.105/libs/openmap.jar"/>
+			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.107/libs/openmap.jar"/>
 			<pathelement path="../org.mwc.cmap.legacy/libs/jmf.jar"/>
-			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.105/libs/jmf.jar"/>
+			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.107/libs/jmf.jar"/>
 			<pathelement path="../org.mwc.cmap.legacy/libs/vrml97.jar"/>
-			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.105/libs/vrml97.jar"/>
+			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.107/libs/vrml97.jar"/>
 			<pathelement path="../org.mwc.cmap.legacy/libs/jcommon-1.0.16.jar"/>
-			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.105/libs/jcommon-1.0.16.jar"/>
+			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.107/libs/jcommon-1.0.16.jar"/>
 			<pathelement path="../org.mwc.cmap.legacy/libs/jfreechart-1.0.13.jar"/>
-			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.105/libs/jfreechart-1.0.13.jar"/>
+			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.107/libs/jfreechart-1.0.13.jar"/>
 			<pathelement path="../org.mwc.cmap.legacy/libs/flanagan.jar"/>
-			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.105/libs/flanagan.jar"/>
-			<pathelement path="../../../Applications/eclipse-rcp-helios-SR1-macosx-cocoa-x86_64/plugins/org.junit_4.8.1.v4_8_1_v20100427-1100/junit.jar"/>
-			<pathelement path="../../../Applications/eclipse-rcp-helios-SR1-macosx-cocoa-x86_64/plugins/org.hamcrest.core_1.1.0.v20090501071000.jar"/>
+			<pathelement path="${build.result.folder}/../org.mwc.cmap.legacy_1.0.107/libs/flanagan.jar"/>
+			<pathelement path="../../../Applications/eclipse-SDK-3.6.1-macosx-cocoa-x86_64/plugins/org.junit_4.8.1.v4_8_1_v20100427-1100/junit.jar"/>
+			<pathelement path="../../../Applications/eclipse-SDK-3.6.1-macosx-cocoa-x86_64/plugins/org.hamcrest.core_1.1.0.v20090501071000.jar"/>
 		</path>
 		<!-- compile the source code -->
 		<javac destdir="${temp.folder}/debrief_legacy.jar.bin" failonerror="${javacFailOnError}" verbose="${javacVerbose}" debug="${javacDebugInfo}" includeAntRuntime="no" bootclasspath="${bundleBootClasspath}" source="${bundleJavacSource}" target="${bundleJavacTarget}" errorProperty="compilation.error.occured"		>
@@ -151,10 +151,10 @@
 	</target>
 
 	<target name="checkCompilationResults" if="compilation.error.occured">
-		<echo file="${compilation.problem.marker}" message="org.mwc.debrief.legacy_1.0.163${line.separator}compilation.error.occured=${compilation.error.occured}"/>
-		<eclipse.logCompileError bundle="org.mwc.debrief.legacy_1.0.163" log="${compilation.prereq.log}">
+		<echo file="${compilation.problem.marker}" message="org.mwc.debrief.legacy_1.0.165${line.separator}compilation.error.occured=${compilation.error.occured}"/>
+		<eclipse.logCompileError bundle="org.mwc.debrief.legacy_1.0.165" log="${compilation.prereq.log}">
 			<include name="/Users/ianmayo/dev/Debrief36/org.mwc.cmap.legacy/compilation.problem"/>
-			<include name="${pluginTemp}/org.mwc.cmap.legacy_1.0.105/compilation.problem"/>
+			<include name="${pluginTemp}/org.mwc.cmap.legacy_1.0.107/compilation.problem"/>
 		</eclipse.logCompileError>
 	</target>
 
@@ -164,7 +164,7 @@
 	</target>
 
 	<target name="publish.bin.parts" depends="init" if="p2.publish.parts" unless="compilation.problem.marker.exists">
-		<mkdir dir="${build.result.folder}/org.mwc.debrief.legacy_1.0.163"/>
+		<mkdir dir="${build.result.folder}/org.mwc.debrief.legacy_1.0.165"/>
 		<copy todir="${build.result.folder}" failonerror="true" overwrite="true">
 			<fileset dir="${basedir}">
 				<include name="META-INF/MANIFEST.MF"/>
@@ -172,7 +172,7 @@
 				<include name="fragment.xml"/>
 			</fileset>
 		</copy>
-		<eclipse.versionReplacer path="${build.result.folder}" version="1.0.163"/>
+		<eclipse.versionReplacer path="${build.result.folder}" version="1.0.165"/>
 		<antcall target="apitools.generation">
 			<param name="target.folder" value="${build.result.folder}"/>
 			<param name="projectLocation" value="${basedir}"/>
@@ -189,23 +189,23 @@
 	</target>
 
 	<target name="gather.bin.parts" depends="init" if="destination.temp.folder">
-		<mkdir dir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.163"/>
-		<copy todir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.163" failonerror="true" overwrite="false">
+		<mkdir dir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.165"/>
+		<copy todir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.165" failonerror="true" overwrite="false">
 			<fileset dir="${build.result.folder}">
 				<include name="debrief_legacy.jar"/>
 			</fileset>
 		</copy>
-		<copy todir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.163" failonerror="true" overwrite="true">
+		<copy todir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.165" failonerror="true" overwrite="true">
 			<fileset dir="${basedir}">
 				<include name="debrief_legacy.jar"/>
 				<include name="META-INF/"/>
 			</fileset>
 		</copy>
-		<eclipse.versionReplacer path="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.163" version="1.0.163"/>
+		<eclipse.versionReplacer path="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.165" version="1.0.165"/>
 		<antcall target="apitools.generation">
-			<param name="target.folder" value="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.163"/>
+			<param name="target.folder" value="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.165"/>
 			<param name="projectLocation" value="${basedir}"/>
-			<param name="binary.folders" value="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.163/debrief_legacy.jar"/>
+			<param name="binary.folders" value="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.165/debrief_legacy.jar"/>
 			<param name="projectName" value="${bundleId}_${bundleVersion}"/>
 		</antcall>
 	</target>
@@ -214,10 +214,10 @@
 	</target>
 
 	<target name="gather.sources" depends="init" if="destination.temp.folder">
-		<mkdir dir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.163"/>
-		<copy file="${build.result.folder}/debrief_legacysrc.zip" todir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.163" failonerror="false" overwrite="false"/>
+		<mkdir dir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.165"/>
+		<copy file="${build.result.folder}/debrief_legacysrc.zip" todir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.165" failonerror="false" overwrite="false"/>
 		<antcall target="copy.src.includes">
-			<param name="source.destination.folder" value="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.163"/>
+			<param name="source.destination.folder" value="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.165"/>
 		</antcall>
 	</target>
 
@@ -234,8 +234,8 @@
 	</target>
 
 	<target name="gather.logs" depends="init" if="destination.temp.folder">
-		<mkdir dir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.163"/>
-		<copy todir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.163" failonerror="false" overwrite="false">
+		<mkdir dir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.165"/>
+		<copy todir="${destination.temp.folder}/org.mwc.debrief.legacy_1.0.165" failonerror="false" overwrite="false">
 			<fileset dir="${temp.folder}">
 				<include name="debrief_legacy.jar.bin${logExtension}"/>
 			</fileset>
@@ -245,8 +245,8 @@
 	<target name="clean" depends="init" description="Clean the plug-in: org.mwc.debrief.legacy of all the zips, jars and logs created.">
 		<delete file="${build.result.folder}/debrief_legacy.jar"/>
 		<delete file="${build.result.folder}/debrief_legacysrc.zip"/>
-		<delete file="${plugin.destination}/org.mwc.debrief.legacy_1.0.163.jar"/>
-		<delete file="${plugin.destination}/org.mwc.debrief.legacy_1.0.163.zip"/>
+		<delete file="${plugin.destination}/org.mwc.debrief.legacy_1.0.165.jar"/>
+		<delete file="${plugin.destination}/org.mwc.debrief.legacy_1.0.165.zip"/>
 		<delete dir="${temp.folder}"/>
 		<delete file="${compilation.problem.marker}" quiet="true"/>
 	</target>
@@ -272,7 +272,7 @@
 				<include name="**/*.bin${logExtension}"/>
 			</fileset>
 		</delete>
-		<zip destfile="${plugin.destination}/org.mwc.debrief.legacy_1.0.163.zip" basedir="${temp.folder}" filesonly="true" whenempty="skip" update="false"/>
+		<zip destfile="${plugin.destination}/org.mwc.debrief.legacy_1.0.165.zip" basedir="${temp.folder}" filesonly="true" whenempty="skip" update="false"/>
 		<delete dir="${temp.folder}"/>
 	</target>
 
