programatically open cheat sheet to lead user through creating project if there isn't one present
git-svn-id: http://subversion.assembla.com/svn/Debrief@3395 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.core/plugin.xml
+++ b/trunk/org.mwc.debrief.core/plugin.xml
@@ -65,6 +65,7 @@
 		<import plugin="org.eclipse.ui" />
 		<import plugin="org.eclipse.ui.ide" />
 		<import plugin="org.eclipse.core.filesystem" />
+  <import plugin="org.eclipse.ui.cheatsheets" version="3.4.0"/>
 
 	</requires>
 	<extension-point id="DebriefPlotLoader" name="Plot Loader"
