working for multi-scenario
git-svn-id: http://subversion.assembla.com/svn/Debrief@3407 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.ScenarioController2/plugin.xml
+++ b/trunk/org.mwc.asset.ScenarioController2/plugin.xml
@@ -8,7 +8,7 @@
             name="Scenario controller"
             icon="icons/gears_run.png"
             category="org.mwc.asset.core.simulation.category"
-            class="org.mwc.asset.scenariocontroller2.views.ScenarioControllerView"
+            class="org.mwc.asset.scenariocontroller2.views.MultiScenarioView"
             id="org.mwc.asset.ScenarioController2">
       </view>
    </extension>
