--- a/trunk/org.mwc.cmap.core/.classpath
+++ b/trunk/org.mwc.cmap.core/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="libs/org.eclipse.nebula.widgets.formattedtext_1.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/jfreechart-1.0.13-swt.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xstream-1.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/mockito-all-1.8.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
