include missing lib
git-svn-id: http://subversion.assembla.com/svn/Debrief@3484 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.cmap.core/plugin.xml
+++ b/trunk/org.mwc.cmap.core/plugin.xml
@@ -27,6 +27,11 @@
                name="*">
          </export>
       </library>
+      <library name="libs/mockito-all-1.8.5.jar">
+         <export
+               name="*">
+         </export>
+      </library>
    </runtime>
 
    <requires>
