--- a/trunk/org.mwc.cmap.core/build.properties
+++ b/trunk/org.mwc.cmap.core/build.properties
@@ -3,7 +3,8 @@ output.cmap_core.jar = bin/
 bin.includes = plugin.xml,\
                cmap_core.jar,\
                icons/,\
-               libs/
+               libs/,\
+               libs/mockito-all-1.8.5.jar
 jars.compile.order = cmap_core.jar
 src.includes = icons/
 root=file:libs/javaClipboard.dll              
