--- a/trunk/org.mwc.asset.legacy/.classpath
+++ b/trunk/org.mwc.asset.legacy/.classpath
@@ -9,6 +9,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="libs/postgis_1.3.5.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/postgresql-8.3-604.jdbc4.jar"/>
+	<classpathentry kind="lib" path="libs/jaxen-1.1.3.jar"/>
 	<classpathentry kind="src" path="libs"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
