--- a/trunk/org.mwc.asset.legacy/build.properties
+++ b/trunk/org.mwc.asset.legacy/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                bin/,\
                libs/,\
                libs/postgis_1.3.5.jar,\
-               libs/postgresql-8.3-604.jdbc4.jar
+               libs/postgresql-8.3-604.jdbc4.jar,\
+               libs/jaxen-1.1.3.jar
