include the lib we need for the ftp task
git-svn-id: http://subversion.assembla.com/svn/Debrief@3513 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.help/.classpath
+++ b/trunk/org.mwc.debrief.help/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="cheat_sheets"/>
+	<classpathentry kind="lib" path="lib/commons-net-2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
