introduce context sensitive help for Asset, provide context-sensitive help button for scenario controller.
git-svn-id: http://subversion.assembla.com/svn/Debrief@3547 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.help/plugin.xml
+++ b/trunk/org.mwc.asset.help/plugin.xml
@@ -16,6 +16,12 @@
       
    </extension>
    
+      <extension
+         point="org.eclipse.help.contexts">
+      <contexts
+            file="HelpContexts.xml"  plugin="org.mwc.asset.help"/>
+   </extension>
+   
    <extension
          point="org.eclipse.ui.cheatsheets.cheatSheetContent">
       <category
