Introduce test framework (to prove multipath algorithm against suppled data)
git-svn-id: http://subversion.assembla.com/svn/Debrief@3600 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.multipath2/plugin.xml
+++ b/trunk/org.mwc.debrief.multipath2/plugin.xml
@@ -11,6 +11,13 @@
             class="org.mwc.debrief.multipath2.views.MultiPathView"
             id="org.mwc.debrief.MultiPath2">
       </view>
+      <view
+            name="Multpath Analysis (Test)"
+            icon="icons/MultiPath.png"
+            category="org.mwc.cmap.plotViewer.CMAP"
+            class="org.mwc.debrief.multipath2.views.MultiPathViewTest"
+            id="org.mwc.debrief.MultiPath2Test">
+      </view>
    </extension>
 
 </plugin>
