correct spelling of multipath
git-svn-id: http://subversion.assembla.com/svn/Debrief@3610 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.multipath2/plugin.xml
+++ b/trunk/org.mwc.debrief.multipath2/plugin.xml
@@ -5,14 +5,14 @@
    <extension
          point="org.eclipse.ui.views">
       <view
-            name="Multpath Analysis"
+            name="Multipath Analysis"
             icon="icons/MultiPath.png"
             category="org.mwc.cmap.plotViewer.CMAP"
             class="org.mwc.debrief.multipath2.views.MultiPathView"
             id="org.mwc.debrief.MultiPath2">
       </view>
       <view
-            name="Multpath Analysis (Test)"
+            name="Multipath Analysis (Test)"
             icon="icons/MultiPath.png"
             category="org.mwc.cmap.plotViewer.CMAP"
             class="org.mwc.debrief.multipath2.views.MultiPathViewTest"
