polish off implementation
git-svn-id: http://subversion.assembla.com/svn/Debrief@3611 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.debrief.multipath2/plugin.xml
+++ b/trunk/org.mwc.debrief.multipath2/plugin.xml
@@ -8,14 +8,14 @@
             name="Multipath Analysis"
             icon="icons/MultiPath.png"
             category="org.mwc.cmap.plotViewer.CMAP"
-            class="org.mwc.debrief.multipath2.views.MultiPathView"
+            class="org.mwc.debrief.multipath2.MultiPathView"
             id="org.mwc.debrief.MultiPath2">
       </view>
       <view
             name="Multipath Analysis (Test)"
             icon="icons/MultiPath.png"
             category="org.mwc.cmap.plotViewer.CMAP"
-            class="org.mwc.debrief.multipath2.views.MultiPathViewTest"
+            class="org.mwc.debrief.multipath2.MultiPathViewTest"
             id="org.mwc.debrief.MultiPath2Test">
       </view>
    </extension>
