--- a/trunk/org.mwc.debrief.build/build361.properties
+++ b/trunk/org.mwc.debrief.build/build361.properties
@@ -30,6 +30,7 @@ p2.artifact.repo=file:${builder}/repository
 #     configs=win32,win32,x86 & linux,motif,x86
 # By default the value is *,*,*
 
+# OSX BUILD VERSION:  configs = win32,win32,x86 & macosx,cocoa,x86_64
 configs = win32,win32,x86
 #ßarchivesFormat=win32,win32,x86-antZip
 
