switch to alternate SAX parser lib to avoid some text corruption issues
git-svn-id: http://subversion.assembla.com/svn/Debrief@3655 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.gnd.demonstrator/.classpath
+++ b/trunk/org.mwc.gnd.demonstrator/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="libs/postgresql-8.3-604.jdbc3.jar"/>
 	<classpathentry kind="lib" path="libs/postgis_1.3.5.jar"/>
-	<classpathentry kind="lib" path="libs/xercesImpl-2.7.1.jar"/>
+	<classpathentry kind="lib" path="libs/sax2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
