--- a/trunk/org.mwc.asset.comms/.classpath
+++ b/trunk/org.mwc.asset.comms/.classpath
@@ -8,11 +8,6 @@
 	<classpathentry kind="lib" path="libs/smackx.jar"/>
 	<classpathentry kind="lib" path="libs/smackx-debug.jar"/>
 	<classpathentry kind="lib" path="libs/smackx-jingle.jar"/>
-	<classpathentry kind="lib" path="/contribs/kryonet-1.02/asm-3.2.jar"/>
-	<classpathentry kind="lib" path="/contribs/kryonet-1.02/kryo-1.02.jar"/>
-	<classpathentry kind="lib" path="/contribs/kryonet-1.02/kryonet-1.02.jar"/>
-	<classpathentry kind="lib" path="/contribs/kryonet-1.02/minlog-1.2.jar"/>
-	<classpathentry kind="lib" path="/contribs/kryonet-1.02/reflectasm-0.8.jar"/>
 	<classpathentry kind="lib" path="libs/RestLet/lib/com.thoughtworks.xstream.jar"/>
 	<classpathentry kind="lib" path="libs/RestLet/lib/org.codehaus.jettison.jar"/>
 	<classpathentry kind="lib" path="libs/RestLet/lib/org.json.jar"/>
@@ -20,5 +15,14 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/org.mwc.cmap.legacy"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.mwc.debrief.legacy"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
+	<classpathentry kind="lib" path="/contribs/kryonet-1.04/asm-3.3.1.jar"/>
+	<classpathentry kind="lib" path="/contribs/kryonet-1.04/kryo-1.04.jar"/>
+	<classpathentry kind="lib" path="/contribs/kryonet-1.04/kryonet-1.04.jar" sourcepath="/contribs/kryonet-1.04/kryonet/src">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/Users/ianmayo/dev/Debrief_37/contribs/kryonet-1.04/api/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/contribs/kryonet-1.04/minlog-1.2.jar"/>
+	<classpathentry kind="lib" path="/contribs/kryonet-1.04/reflectasm-1.01.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
