--- a/trunk/org.mwc.asset.NetAssetCommon/.classpath
+++ b/trunk/org.mwc.asset.NetAssetCommon/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/KryoNet"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.mwc.asset.legacy"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
