--- a/trunk/org.mwc.asset.NetAsset2/.classpath
+++ b/trunk/org.mwc.asset.NetAsset2/.classpath
@@ -10,7 +10,7 @@
 			<attribute name="javadoc_location" value="file:/Users/ianmayo/dev/Debrief_37/org.mwc.asset.NetAsset2/libs/kryonet-1.04/api/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/kryonet-1.04/minlog-1.2.jar"/>
+	<classpathentry kind="lib" path="libs/kryonet-1.04/minlog-1.2.jar" sourcepath="libs/kryonet-1.04/kryonet/src"/>
 	<classpathentry kind="lib" path="libs/kryonet-1.04/reflectasm-1.01.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
