plugging real UI in
git-svn-id: http://subversion.assembla.com/svn/Debrief@3844 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.NetAsset2/build.properties
+++ b/trunk/org.mwc.asset.NetAsset2/build.properties
@@ -4,4 +4,10 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               splash.bmp
+               splash.bmp,\
+               libs/,\
+               libs/kryonet-1.04/asm-3.3.1.jar,\
+               libs/kryonet-1.04/kryo-1.04.jar,\
+               libs/kryonet-1.04/kryonet-1.04.jar,\
+               libs/kryonet-1.04/minlog-1.2.jar,\
+               libs/kryonet-1.04/reflectasm-1.01.jar
