introduce participant control
git-svn-id: http://subversion.assembla.com/svn/Debrief@3848 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.NetAsset2/plugin.xml
+++ b/trunk/org.mwc.asset.NetAsset2/plugin.xml
@@ -31,6 +31,11 @@
             id="org.mwc.asset.NetAsset2.TimeView"
             name="Time">
       </view>
+      <view
+            class="org.mwc.asset.netasset2.PartView"
+            id="org.mwc.asset.NetAsset2.PartView"
+            name="Participant">
+      </view>
    </extension>
    <extension
          point="org.eclipse.ui.perspectiveExtensions">
@@ -52,7 +57,17 @@
                id="org.mwc.asset.NetAsset2.TimeView"
                minimized="false"
                relationship="bottom"
-               relative="org.eclipse.ui.editorss">
+               relative="org.mwc.asset.NetAsset2.ConnectView">
+         </view>
+      </perspectiveExtension>
+      <perspectiveExtension
+            targetID="*">
+         <view
+               closeable="false"
+               id="org.mwc.asset.NetAsset2.PartView"
+               minimized="false"
+               relationship="bottom"
+               relative="org.mwc.asset.NetAsset2.TimeView">
          </view>
       </perspectiveExtension>
    </extension>
