early steps for plot
git-svn-id: http://subversion.assembla.com/svn/Debrief@3873 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.NetAsset2/plugin.xml
+++ b/trunk/org.mwc.asset.NetAsset2/plugin.xml
@@ -36,6 +36,11 @@
             id="org.mwc.asset.NetAsset2.PartView"
             name="Participant">
       </view>
+      <view
+            class="org.mwc.asset.netasset2.plot.PlotRCPView"
+            id="org.mwc.asset.NetAsset2.PlotView"
+            name="Plot">
+      </view>
    </extension>
    <extension
          point="org.eclipse.ui.perspectiveExtensions">
@@ -65,6 +70,16 @@
          <view
                closeable="false"
                id="org.mwc.asset.NetAsset2.PartView"
+               minimized="false"
+               relationship="bottom"
+               relative="org.mwc.asset.NetAsset2.TimeView">
+         </view>
+      </perspectiveExtension>
+      <perspectiveExtension
+            targetID="*">
+         <view
+               closeable="false"
+               id="org.mwc.asset.NetAsset2.PlotView"
                minimized="false"
                relationship="bottom"
                relative="org.mwc.asset.NetAsset2.TimeView">
