accelerate/decelerate scenario time  implemented
git-svn-id: http://subversion.assembla.com/svn/Debrief@3876 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.NetAsset2/.classpath
+++ b/trunk/org.mwc.asset.NetAsset2/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/kryonet-1.04/kryo-1.04.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/kryonet-1.04/minlog-1.2.jar" sourcepath="libs/kryonet-1.04/kryonet/src"/>
 	<classpathentry exported="true" kind="lib" path="libs/kryonet-1.04/reflectasm-1.01.jar"/>
+	<classpathentry kind="lib" path="swing2swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
