--- a/trunk/org.mwc.asset.core/plugin_customization.ini
+++ b/trunk/org.mwc.asset.core/plugin_customization.ini
@@ -1,2 +1,2 @@
-org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP = false
-org.eclipse.ui/defaultPerspectiveId=org.mwc.asset.core.Perspective
+org.eclipse.ui/SHOW_PROGRESS_ON_STARTUP = true
+org.eclipse.ui/defaultPerspectiveId = org.mwc.asset.core.Perspective
