--- a/trunk/org.mwc.asset.NetAsset2/.classpath
+++ b/trunk/org.mwc.asset.NetAsset2/.classpath
@@ -3,15 +3,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="libs/kryonet-1.04/kryonet-1.04.jar" sourcepath="libs/kryonet-1.04/kryonet/src">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/Users/ianmayo/dev/Debrief_37/org.mwc.asset.NetAsset2/libs/kryonet-1.04/api/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="libs/kryonet-1.04/asm-3.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/kryonet-1.04/kryo-1.04.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/kryonet-1.04/minlog-1.2.jar" sourcepath="libs/kryonet-1.04/kryonet/src"/>
-	<classpathentry exported="true" kind="lib" path="libs/kryonet-1.04/reflectasm-1.01.jar"/>
 	<classpathentry kind="lib" path="swing2swt.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.mwc.asset.NetCore"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
