--- a/trunk/org.mwc.asset.NetAsset2/build.properties
+++ b/trunk/org.mwc.asset.NetAsset2/build.properties
@@ -4,4 +4,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               splash.bmp
+               splash.bmp,\
+               swing2swt.jar,\
+               NetAsset.product
