--- a/trunk/org.mwc.asset.NetCore/build.properties
+++ b/trunk/org.mwc.asset.NetCore/build.properties
@@ -8,6 +8,6 @@ bin.includes = META-INF/,\
                .project,\
                libs/kryonet-1.04/asm-3.3.1.jar,\
                libs/kryonet-1.04/kryo-1.04.jar,\
-               libs/kryonet-1.04/kryonet-1.04.jar,\
+               libs/kryonet-1.04/akryonet-1.04.jar,\
                libs/kryonet-1.04/minlog-1.2.jar,\
                libs/kryonet-1.04/reflectasm-1.01.jar
