tidy classpath, incorporate kryo sources
git-svn-id: http://subversion.assembla.com/svn/Debrief@3945 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.NetAsset2/.classpath
+++ b/trunk/org.mwc.asset.NetAsset2/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="swing2swt.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.mwc.asset.NetCore"/>
+	<classpathentry kind="lib" path="/org.mwc.asset.NetCore/libs/kryonet-1.04/minlog-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
