include command to reset perspective (so new views can be seen)
git-svn-id: http://subversion.assembla.com/svn/Debrief@3962 cb33b658-6c9e-41a7-9690-cba343611204

--- a/trunk/org.mwc.asset.NetAsset2/plugin.xml
+++ b/trunk/org.mwc.asset.NetAsset2/plugin.xml
@@ -59,6 +59,11 @@
          <menu
                label="File">
             <command
+                  commandId="org.eclipse.ui.window.resetPerspective"
+                  label="Reset perspective"
+                  style="push">
+            </command>
+            <command
                   commandId="org.eclipse.ui.file.exit"
                   label="Exit">
             </command>
